Added sim sharing message that indicates when a circuit component (called a 'branch' in the source code) is removed from the play area.
Added sim sharing message that indicates when a wire segment has been moved by the user.
Added sim sharing message that indicates when components in the circuit have been moved by the user.
Added user component IDs for all the basic circuit elements that can be added from the tool box.
Generalized sim sharing message for component creation, moved message sending into Circuit class to avoid creation messages at startup (due to creation of tool box nodes).
UBC study: Changed study name from "ubc-feb-2013" to "ubc-spring-2013".
UBC study: Changed configuration to launch DC-only version of sim.
UBC study: Added prompt for student ID.
# 3.20.07 (71899) Jan 29, 2013
1/29/13 Deploying initial version for UBC study to dev for some early testing.
Made UBC study flavor request all permissions.
Added new flavor for UBC study, targeted for February 2013.
Removed "goldberg" flavor.
# 3.20.06 (66288) Jul 26, 2012
# 3.20.05 (66287) Jul 26, 2012
7/26/2012 Added a new sim that has 1.0 Ohm internal resistance batteries by default
# 3.20.04 (65848) Jul 16, 2012
7/16/12 dev version that reflects changes to sponsor feature
7/16/12 #3380, add "-sponsor-off" arg to build.properties for production version of CCK DC
7/16/12 #3380, restore sponsor prototype files for CCK DC
5/29/12 #3166, deleted sponsor prototype files
# 3.20.03 (61560) Feb 21, 2012
2/21/12 new dev version for sponsor prototype, KD was having problems running the previous version
2/21/12 #3166, create a separate flavor for sponsor prototype, so we don't have to keep enabling/disabling in circuit-construction-kit-build.properties
2/8/12 #3166, disable sponsor prototype in circuit-construction-kit-build.properties
# 3.20.02 (61116) Feb 8, 2012
2/8/12 dev version with change requests to sponsor prototype
2/8/11 #3166, enable sponsor prototype in circuit-construction-kit-build.properties