@@ -15,7 +15,8 @@ import edu.colorado.phet.common.phetcommon.simsharing.messages.IUserComponent;
 public class CCKSimSharing {
     public static enum UserComponents implements IUserComponent {
         unspecifiedBranch, battery, wire, resistor, grabBagResistor, lightBulb,
-        circuitSwitch, inductor, acVoltageSource, capacitor, seriesAmmeter
+        circuitSwitch, inductor, acVoltageSource, capacitor, voltmeterCheckBox,
+        ammeterCheckBox, seriesAmmeterCheckBox, seriesAmmeter
     }
 
     public static enum UserActions implements IUserAction {
